Fix combatant scrollbar panning map

--- a/CampaignManager.Frontend/src/styles/main.scss
+++ b/CampaignManager.Frontend/src/styles/main.scss
@@ -278,7 +278,6 @@
     align-items: flex-start;
     width: max-content;
     max-width: 100%;
-    height: 500px;
     scrollbar-width: none;
     -ms-overflow-style: none;
     &::-webkit-scrollbar {
